# m3u-to-spotify

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
m3u-to-spotify/: Cargo.toml
m3u-to-spotify-cli/: Cargo.toml  README.md
m3u-to-spotify-cli/src/: args.rs  main.rs
m3u-to-spotify/src/: lib.rs  playlist.rs  spotify.rs  track.rs
