[workspace]
resolver = "2"
members = [
    "m3u-to-spotify",
    "m3u-to-spotify-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["Isak Wertwein <isak.wertwein@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0.86"
m3u = "1.0.0"
id3 = { version = "1.14.0" }
rspotify = { version = "0.13.2", features = ["client-ureq", "ureq-rustls-tls"], default-features = false }
uuid = { version = "1.10.0", features = ["v4"] }
clap = { version = "4.5.9", features = ["derive", "env"] }
indicatif = "0.17.8"

[workspace.lints.rust]
dead_code = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
inline_always = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
redundant_closure = "allow"
similar_names = "allow"
too_many_arguments = "allow"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
